# raiseHRI_VR

./: 0_ros_setup.md  README.md
Panda VR Unity/Assets/: msgbrowser_settings.asset  pickandplace.unity
Panda VR Unity/Assets/Oculus/: OculusProjectConfig.asset
Panda VR Unity/Assets/Plugins/Android/: AndroidManifest.xml
Panda VR Unity/Assets/Resources/: OculusRuntimeSettings.asset  ROSConnectionPrefab.prefab
Panda VR Unity/Assets/Scripts/: JointSound.cs
Panda VR Unity/Assets/URDF/panda_description/: panda.urdf
Panda VR Unity/Assets/URDF/panda_description/meshes/collision/: hand.prefab  link0.prefab  link1.prefab  link2.prefab  (+5 more)
Panda VR Unity/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
Panda VR Unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
ROS/.catkin_tools/profiles/default/: devel_collisions.txt
ROS/logs/panda_moveit/: build.check.001.log.stderr  build.cmake.000.log.stderr
ROS/src/panda_moveit/: .setup_assistant
ROS/src/panda_moveit/config/: panda.srdf
ROS/src/panda_moveit/launch/: demo.launch  gazebo.launch  panda_part_2.launch
ROS/src/panda_moveit/scripts/: panda_mover.py  trajectory_subscriber.py
ROS/src/panda_moveit/srv/: MoverService.srv
panda_VR_ROS/.catkin_tools/profiles/default/: devel_collisions.txt
panda_VR_ROS/src/panda_moveit/: CMakeLists.txt  package.xml
panda_VR_ROS/src/panda_moveit/config/: fake_controllers.yaml
panda_VR_ROS/src/panda_moveit/launch/: panda_part_3.launch  planning_context.launch  ros_controllers.launch
panda_VR_ROS/src/panda_moveit/scripts/: mover.py
(+1 files in other folders)
